@@ -1,1 +1,58 @@
+#  Breakout/Brick Breaker arcade game
 
+A classic **Breakout/Brick Breaker arcade game** built with **Java** and **JavaFX**. Smooth animations, colorful bricks, and satisfying ball-paddle physics.
+
+---
+
+##  Gameplay
+
+- Control the paddle with your **mouse or keyboard**
+- Break all the bricks to win
+- Don't let the ball fall below the paddle!
+
+---
+
+##  Features
+
+- Built with JavaFX for smooth rendering
+- Animated ball movement with collision detection
+- Colorful multi-row brick layout
+- Score tracking
+- Game over & win screens
+
+---
+
+##  Tech Stack
+
+| Technology | Purpose |
+|------------|---------|
+| Java | Core game logic |
+| JavaFX | GUI & animations |
+
+---
+
+##  How to Run
+
+### Prerequisites
+- Java JDK 11+
+- JavaFX SDK
+
+### Steps
+```bash
+# Clone the repo
+git clone https://github.com/Sowaiba-01/BreakOut-Game-in-Java.git
+cd BreakOut-Game-in-Java
+
+# Compile (with JavaFX path)
+javac --module-path /path/to/javafx-sdk/lib --add-modules javafx.controls BrickBreak.java
+
+# Run
+java --module-path /path/to/javafx-sdk/lib --add-modules javafx.controls BrickBreak
+```
+
+---
+##  Author
+
+**Sowaiba** — [@Sowaiba-01](https://github.com/Sowaiba-01)
+
+⭐ If you liked it, give the repo a star!
